# SPDX-License-Identifier: BSD-2-Clause

# Copyright (C) 2026 embedded brains GmbH & Co. KG

[project]
name = "package"
version = "0.1.0"
description = "This is a package repository using specmake."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "distro>=1.9.0",
    "jsonschema>=4.26.0",
    "mdformat-deflist>=0.1.3",
    "mdformat-footnote>=0.1.3",
    "mdformat-front-matters>=2.0.0",
    "mdformat-myst>=0.3.0",
    "mdformat-tables>=1.0.0",
    "metrixpp>=1.8.1",
    "myst-parser>=4.0.1",
    "pykwalify>=1.8.0",
    "specmake>=1.5.5",
    "sphinx-better-subsection>=0.2",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-bibtex>=2.6.5",
]
